syntax = "proto3";
package sonrhq.common.peer;

option go_package = "github.com/sonrhq/core/pkg/node/types";


// Basic Info Sent to Peers to Establish Connections
message PeerInfo {
  string id = 1;       // User Sonr Account Decentralized ID
  string name = 2;     // User Defined Label for Peer, also known as PartyID
  string peer_id = 3;  // Peer ID
  string multiaddr = 4; // Peer Multiaddress
  PeerType type = 5;      // Type of Peer
}

// Peers Active Type
enum PeerType {
  UNKNOWN = 0;
  HIGHWAY = 1;
  MOTOR = 2;
  VALIDATOR = 3;
  THIRD_PARTY = 4;
}
