syntax = "proto3";

package highway.authentication.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/sonrhq/core/types/highway/authentication/v1;authenticationpb";

service AuthenticationService {
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse) {}
  rpc Params(google.protobuf.Empty) returns (ParamsResponse) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse) {}
}

message AuthenticateRequest {
  string username = 1;
  string password = 2;
}

message AuthenticateResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message ParamsResponse {
  repeated string params = 1;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message VerifyTokenRequest {
  string access_token = 1;
}

message VerifyTokenResponse {
  bool valid = 1;
}
